fix: update languages, fix Expertise column alignment

--- a/src/components/SkillsSection/SkillsSection.module.css
+++ b/src/components/SkillsSection/SkillsSection.module.css
@@ -3,7 +3,10 @@
   flex-direction: column;
   gap: 10px;
   height: 100%;
-  justify-content: flex-start;
+}
+
+.stack > .card {
+  flex: 1;
 }
 
 .subHeader {
